--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
+    "start": "node index",
+    "watch": "nodemon index",
     "test": "jest"
   },
   "keywords": [],
